--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+# php ignore section starts
+
+vendor/*
+
+
+
+# python ignore section begins
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
